--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.7",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^16.5.4",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
