--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "ajv-keywords": "^5.1.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
-    "framer-motion": "^11.11.7",
+    "framer-motion": "^11.18.2",
     "i18next": "^25.8.0",
     "i18next-browser-languagedetector": "^8.2.0",
+    "lucide-react": "^0.563.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
