--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "framer-motion": "^11.18.2",
+    "html2canvas": "^1.4.1",
     "i18next": "^25.8.0",
     "i18next-browser-languagedetector": "^8.2.0",
+    "jspdf": "^4.1.0",
     "lucide-react": "^0.563.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
