--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 REACT_APP_API_URL = http://localhost:5000/api/v2
+
+REACT_APP_GOOGLE_CLIENT_ID=687763957481-dkfe97m8ko9aic5ugpnhph8p8r534aa8.apps.googleusercontent.com
